# syrabit-zip-convert

./: .gitattributes  .gitignore  .replit  ARCHITECTURE_VERIFICATION_REPORT.md  CLOUDFLARE_DEPLOYMENT_CHECKLIST.md  CLOUDFLARE_DEPLOYMENT_WIRING.md  CRITICAL_FIXES_IMPLEMENTED.md  CRITICAL_ISSUES_RESOLUTION_PLAN.md  CRITICAL_ISSUES_VERIFICATION.md  DEPLOYMENT_BLOCKERS.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_READINESS_PLAN.md  DEPLOYMENT_SUMMARY.md  EINSTEIN_SEO_REVOLUTION.md  EINSTEIN_SEO_REVOLUTION_PART2.md  ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_CODE_MODULES.md  IMPLEMENTATION_SUMMARY.md  NEURAL_MESH_IMPLEMENTATION.md  PHASE1_COMPLETE.md  PHASE3_DEPLOYMENT_GUIDE.md  PR_1_D1_WARMUP.md  PR_2_PARALLEL_LLM_FALLBACK.md  SETUP_GUIDE.md  SYRABIT_DEVELOPER_GUIDE.md  UNBEATABLE_SEO_GEO_AEO_BLUEPRINT.md  WIRING_EXECUTION_PROMPT.md  architecture_verification_test.py  chat_enhancement_layer.py  cliffhanger_engine.py  cognitive_anchor_injector.py  dbg.mjs  dbg10.mjs  dbg11.mjs  dbg12.mjs  dbg13.mjs  dbg2.mjs  dbg3.mjs  dbg4.mjs  dbg5.mjs  (+18 more)
.agents/: agent_assets_metadata.toml
.github/: dependabot.yml
.venv-prod/: pyvenv.cfg
attached_assets/: Cloudflare_admin@syrabit.ai_SecurityInsights_20260419_1602_1776594838134.csv  Pasted--18-02-11-368-artifacts-mockup-sandbox-build-Error-PORT_1775565911048.txt  Pasted--18-02-11-368-artifacts-mockup-sandbox-build-Error-PORT_1775566635114.txt  Pasted--2026-04-19T14-26-50-109994386Z-requestId-MKK5g7HKQkKhh_1776609351645.txt  Pasted--2026-04-19T14-28-31-214768187Z-569c94c5-f87f-4ebe-9a22_1776609146091.txt  Pasted--3-Edge-worker-doesn-t-route-llms-txt-llms-full-txt-or-_1776959301052.txt  Pasted--4-Button-Pipeline-Production-Upgrades-SEO-Topics-Full-_1774861256658.txt  Pasted--63-Maximize-Performance-with-Cloudflare-Enterprise-Wha_1777563089523.txt  Pasted--Admin-Dashboard-RAG-98-Metrics-Upgrade-Add-12-core-wid_1774735089623.txt  Pasted--Architecture-Shift-Syllabus-Chapter-Centric-Workflow-Y_1775219254116.txt  Pasted--Category-Proposed-Actual-Change-Key-Reason--1775032513_1775032513045.txt  Pasted--Chat-RAG-Discovery-Animation-Source-Card-What-Why-When_1777563407163.txt  Pasted--Cloudflare-Replit-Deployment-Fix-What-Why-Fix-all-issu_1775139282315.txt  Pasted--From-Chapter-to-Citation-An-Architectural-Blueprint-fo_1777150097395.txt  Pasted--Library-Search-Apps-35-Fix-Redis-AI-Response-Caching-W_1774880229801.txt  (+173 more)
backend/rust-core/: .env.example  Cargo.toml  Dockerfile  build.rs  railway.toml
backend/rust-core/migrations/: 001_initial_schema.sql
backend/rust-core/proto/: schema.proto
backend/rust-core/src/: main.rs
backend/rust-core/src/db/: mod.rs  models.rs  repository.rs
backend/rust-core/src/grpc/: mod.rs  service.rs
backend/rust-core/src/handlers/: agents.rs  d1_sync.rs  health.rs  mod.rs  rag.rs  staff.rs  websocket.rs
backend/rust-core/src/models/: mod.rs
backend/rust-core/src/services/: graph_rag.rs  mod.rs
docs/: AWS-DEPLOYMENT.md  (+4 more)
(+1167 files in other folders)
