[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.29.0",
    "bcrypt==4.0.1",
    "cachetools>=5.3.3",
    "email-validator==2.3.0",
    "fastapi==0.110.1",
    "groq>=0.4.0",
    "httpx>=0.27.0",
    "motor==3.3.1",
    "openai>=1.0.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.12.5",
    "pyjwt==2.12.0",
    "pymongo==4.5.0",
    "pypdf2==3.0.1",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "supabase==2.28.0",
    "upstash-redis>=1.0.0",
    "uvicorn[standard]==0.25.0",
]
